# simpleEulerSolver

./: .gitignore  CMakeLists.txt  README.md  clean.ps1  cleanBash.sh  eulerPlot.ipynb  main.cpp  plotter.py  requirements.txt  solver_data_cache.nc  todo.md  xarraytest.py
include/: parameters.h  postProcessor.h  preProcessor.h  solver.h
solnData/: solution_000101_000001.csv  solution_000101_000002.csv  solution_000101_000003.csv  solution_000101_000004.csv  solution_000101_000005.csv  solution_000101_000006.csv  solution_000101_000007.csv  solution_000101_000008.csv  solution_000101_000009.csv  solution_000101_000010.csv  solution_000101_000011.csv  solution_000101_000012.csv  solution_000101_000013.csv  solution_000101_000014.csv  solution_000101_000015.csv  solution_000101_000016.csv  solution_000101_000017.csv  solution_000101_000018.csv  solution_000101_000019.csv  solution_000101_000020.csv  solution_000101_000021.csv  solution_000101_000022.csv  solution_000101_000023.csv  solution_000101_000024.csv  solution_000101_000025.csv  solution_000101_000026.csv  solution_000101_000027.csv  solution_000101_000028.csv  solution_000101_000029.csv  solution_000101_000030.csv  solution_000101_000031.csv  solution_000101_000032.csv  solution_000101_000033.csv  solution_000101_000034.csv  solution_000101_000035.csv  solution_000101_000036.csv  solution_000101_000037.csv  solution_000101_000038.csv  solution_000101_000039.csv  solution_000101_000040.csv  (+351 more)
src/: postProcessor.cpp  preProcessor.cpp  solver.cpp
